...
                        crossAxisAlignment: CrossAxisAlignment.stretch,
                        children: [
                          wrapWithModel(
                            model: _model.pageHeaderModel,
                            updateCallback: () => safeSetState(() {}),
                            child: PageHeaderWidget(
                              key: ValueKey('PageHeader_vepg'),
                              title: FFLocalizations.of(context).getText(
                                '6c58brtw' /* Home */,
                              ),
                              isNotifications: false,
                            ),
                          ),
...
                                                              .alternate,
                                                          width: 2.0,
                                                        ),
                                                      ),
                                                      child: Column(
                                                        key: ValueKey(
                                                            'Column_xgfb'),
                                                        mainAxisSize:
                                                            MainAxisSize.max,
                                                        crossAxisAlignment:
                                                            CrossAxisAlignment
                                                                .start,
                                                        children: [
...
                                                                    ),
                                                                  },
                                                                );
                                                              },
                                                              child: Row(
                                                                key: ValueKey(
                                                                    'Row_vh2c'),
                                                                mainAxisSize:
                                                                    MainAxisSize
                                                                        .max,
                                                                children: [
                                                                  Container(
                                                                    width: 60.0,
...
                                                                            0.0,
                                                                            0.0,
                                                                            0.0),
                                                                        child:
                                                                            AutoSizeText(
                                                                          key: ValueKey(
                                                                              'Text_fwpd'),
                                                                          FFLocalizations.of(context)
                                                                              .getText(
                                                                            'ksn08pdc' /* All */,
                                                                          ),
                                                                          style: FlutterFlowTheme.of(context)
                                                                              .bodyMedium
...
                                                                            0.0,
                                                                            0.0,
                                                                            0.0),
                                                                        child:
                                                                            AutoSizeText(
                                                                          key: ValueKey(
                                                                              'Text_7avc'),
                                                                          FFLocalizations.of(context)
                                                                              .getText(
                                                                            'sigebxd9' /* Inbox */,
                                                                          ),
                                                                          style: FlutterFlowTheme.of(context)
                                                                              .bodyMedium
...
                                                                            0.0,
                                                                            0.0,
                                                                            0.0),
                                                                        child:
                                                                            AutoSizeText(
                                                                          key: ValueKey(
                                                                              'Text_hm7f'),
                                                                          FFLocalizations.of(context)
                                                                              .getText(
                                                                            'jbfvv4eq' /* Send out */,
                                                                          ),
                                                                          style: FlutterFlowTheme.of(context)
                                                                              .bodyMedium
...
                                                                            0.0,
                                                                            0.0,
                                                                            0.0),
                                                                        child:
                                                                            AutoSizeText(
                                                                          key: ValueKey(
                                                                              'Text_mifi'),
                                                                          FFLocalizations.of(context)
                                                                              .getText(
                                                                            'ago09cox' /* Favorite */,
                                                                          ),
                                                                          style: FlutterFlowTheme.of(context)
                                                                              .bodyMedium
...
