...
      'km': '__',
    },
  },
  // pgSign-NotUse
  {
    'n99lg1qh': {
      'en': 'Sign',
      'km': 'សញ្ញា',
    },
    'uacnxbrb': {
      'en': 'Search',
      'km': 'ស្វែងរក',
    },
...
    },
    'ihahd9wf': {
      'en': 'Upload',
      'km': 'បញ្ចូល',
    },
    'loltc1hw': {
      'en': 'Delete',
      'km': 'លុប',
    },
    'fqbxax46': {
      'en': 'Edit',
      'km': 'កែសម្រួល',
    },
...
      'km': '__',
    },
  },
  // PageDocuments
  {
    'gdov02bf': {
      'en': 'Documents',
      'km': 'ឯកសារ',
    },
    'fsl77xe1': {
      'en': 'New',
      'km': 'បង្កើតថ្មី',
    },
...
    },
    'gcr9esk9': {
      'en': 'Address',
      'km': 'អាស័យដ្ឋាន',
    },
    'amiami79': {
      'en': 'Log out',
      'km': 'ចេញ',
    },
    'gjspgdwx': {
      'en': 'Please input first name  is required!',
      'km': 'សូមបញ្ចូលឈ្មោះដំបូងគឺចាំបាច់!',
    },
...
    },
    'qv8nbcio': {
      'en': 'Upload From Cloud',
      'km': 'បញ្ចូលពី Cloud',
    },
    'jkt9b732': {
      'en': 'New Folder',
      'km': 'បង្កើតថតឯកសារថ្មី',
    },
    'e4zptwoj': {
      'en': 'Doc',
      'km': 'បណ្ឌិត',
    },
...
    },
    'ey9qznah': {
      'en': 'Cancel',
      'km': 'បោះបង់',
    },
    'kx95j45t': {
      'en': 'Create',
      'km': 'បង្កើត',
    },
  },
  // ComponentReceiveReject
  {
    't96wdqvq': {
...
