...
                                  crossAxisAlignment: CrossAxisAlignment.start,
                                  children: [
                                    Padding(
                                      padding: EdgeInsetsDirectional.fromSTEB(
                                          0.0, 0.0, 0.0, 10.0),
                                      child: Text(
                                        key: ValueKey('Text_rsdh'),
                                        FFLocalizations.of(context).getText(
                                          '3p97u62u' /* Welcome! */,
                                        ),
                                        style: FlutterFlowTheme.of(context)
                                            .displaySmall
                                            .override(
...
                                                          ),
                                                    ),
                                                  ),
                                                ),
                                                TextFormField(
                                                  key: ValueKey(
                                                      'emailAddress_na8l'),
                                                  controller: _model
                                                      .emailAddressTextController,
                                                  focusNode: _model
                                                      .emailAddressFocusNode,
                                                  autofocus: false,
                                                  obscureText: false,
...
                                                          ),
                                                    ),
                                                  ),
                                                ),
                                                TextFormField(
                                                  key:
                                                      ValueKey('password_oblr'),
                                                  controller: _model
                                                      .passwordTextController,
                                                  focusNode:
                                                      _model.passwordFocusNode,
                                                  autofocus: false,
                                                  obscureText: !_model
...
                                            ),
                                          ).animateOnPageLoad(animationsMap[
                                              'textOnPageLoadAnimation3']!),

                                          // This button does the login flow
                                          FFButtonWidget(
                                            key: ValueKey('Button-Login_61ul'),
                                            onPressed: () async {
                                              logFirebaseEvent(
                                                  'LOGIN_PAGE_PAGE_Button-Login_ON_TAP');
                                              GoRouter.of(context)
                                                  .prepareAuthEvent();

...
