...
              tablet: false,
            ))
              wrapWithModel(
                model: _model.sidebarModel,
                updateCallback: () => safeSetState(() {}),
                child: SidebarWidget(
                  key: ValueKey('sidebar_5ytp'),
                  iconOne: Icon(
                    key: ValueKey('sidebar_5ytp'),
                    Icons.dashboard_outlined,
                    color: FlutterFlowTheme.of(context).secondaryText,
                  ),
                  iconTwo: Icon(
...
                  crossAxisAlignment: CrossAxisAlignment.start,
                  children: [
                    wrapWithModel(
                      model: _model.pageHeaderModel,
                      updateCallback: () => safeSetState(() {}),
                      child: PageHeaderWidget(
                        key: ValueKey('PageHeader_llvu'),
                        title: FFLocalizations.of(context).getText(
                          'gdov02bf' /* Documents */,
                        ),
                        isNotifications: false,
                      ),
                    ),
...
                                                );
                                              },
                                            );
                                          },
                                          child: Container(
                                            key: ValueKey(
                                                'ContainerUpload_h44d'),
                                            width: 350.0,
                                            height: 80.0,
                                            decoration: BoxDecoration(
                                              color: valueOrDefault<Color>(
                                                _model.mouseRegionHovered!
                                                    ? Color(0x93E0E3E7)
...
